# FISC

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
docs/: documentation.html  downloads.html  index.html  structure  support.html
docs/assets/css/: style.css
docs/downloads/configs/: 386dx.fxml  486dx2.fxml
docs/downloads/docs/: fisc_manual.tex
scripts/: build.bat  build.sh
src/cli/: fisc_cli.cpp
src/config/: FiscConfigParser.cpp  FiscConfigParser.hpp  FiscConfigSchema.cpp  FiscConfigSchema.hpp
src/gui/: FiscConfigApp.cpp  FiscConfigApp.hpp  main.cpp
src/shell/: MiniBiosShell.cpp  MiniBiosShell.hpp
src/tui/: FiscConfigTui.cpp  FiscConfigTui.hpp  main.cpp
src/vpu/: FiscVpu.cpp  FiscVpu.hpp
